--- a/template.Rmd
+++ b/template.Rmd
@@ -15,7 +15,7 @@ You'll need to install both `remotes` and `tidytuesdayR` to do this:
 
 ```{r}
 install.packages("remotes")
-remotes::install_github("thebioengineer/tidytuesdayR")
+install.packages("tidytuesdayR")
 #optional
 #remotes::install_github("laderast/burro")
 ```
